# DSChaosMod

./: .gitignore  .pre-commit-config.yaml  .prettierrc  Pipfile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  effect-suggestion.md  feature-request.md
.github/workflows/: main.yml
ChaosController/: mod.py
ChaosController/DarkSoulsRemastered/Effects/: Effect.py  WarpToBonfire.py  __init__.py
ChaosController/DarkSoulsRemastered/Memory/: AOBS.py  __init__.py
TwitchVotingOverlay/: index.html  styles.css
TwitchVotingServer/: TwitchBot.py  client.py  config.ini  server.py
TwitchVotingServer/Bots/: TwitchBot.py
TwitchVotingServer/ChaosHandler/: ChaosHandler.py  Effect.py
TwitchVotingServer/ChaosHandler/DarkSoulsRemastered/: DSREffect.py  Game.py
TwitchVotingServer/ConfigHandler/: ConfigHandler.py
TwitchVotingServer/HTTPServer/: UrlFragmentFetchServer.py  html_block.html
TwitchVotingServer/ServerGUI/: ServerGUI.py
TwitchVotingServer/VotingHandler/: VotingHandler.py
TwitchVotingServer/WebsocketHandler/: WebsocketHandler.py
TwitchVotingServer/chaos/: chaos_handler.py  effect.py
TwitchVotingServer/config/: config.ini  config.toml
TwitchVotingServer/config_handler/: config_handler.py
TwitchVotingServer/gui/: server_gui.py
TwitchVotingServer/utils/: ConfigHandler.py  ServerGUI.py  TwitchBot.py  VotingHandler.py  __init__.py
TwitchVotingServer/voting/: voting_handler.py
tests/chaos/: test_effect.py
tests/config_handler/: test_config_handler.py
(+57 files in other folders)
